--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "author": "Jacty",
     "devDependencies": {
         "@snowpack/plugin-sass": "^1.1.1",
-        "react": "0.0.0-experimental-a703c3f7e",
-        "react-dom": "0.0.0-experimental-a703c3f7e",
-        "react-router-dom": "^5.2.0",
+        "@snowpack/plugin-typescript": "^1.2.1",
         "snowpack": "^2.18.5"
     }
 }
