--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "description": "My personal website",
     "scripts": {
-        "start": "snowpack dev"
+        "start": "node src/index.js"
     },
     "private": true,
     "author": "Jacty",
