--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "author": "Jacty",
     "devDependencies": {
         "@snowpack/plugin-sass": "^1.1.1",
-        "react": "^0.0.0-experimental-634cc52e6",
-        "react-dom": "^0.0.0-experimental-634cc52e6",
+        "puppeteer-core": "^9.0.0",
         "react-router-dom": "^5.2.0",
         "snowpack": "^2.17.0"
     }
