--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "author": "Jacty",
     "devDependencies": {
         "@snowpack/plugin-sass": "^1.1.1",
-        "puppeteer-core": "^9.0.0",
-        "react-router-dom": "^5.2.0",
+        "react": "^0.0.0-experimental-48740429b",
+        "react-dom": "^0.0.0-experimental-48740429b",
         "snowpack": "^2.17.0"
     }
 }
