Remove TS from env

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "version": "0.0.1",
     "description": "My personal website",
     "scripts": {
-        "tsc": "tsc -w -p .",
         "start": "snowpack dev",
-        "crawl": "node src/index.js",
+        "crawl": "node src/lib/Pup/demo.js",
         "dev": "node src/lib/Dev/index.js",
         "build":"node build/build.js"
     },
